menu1- card s white space fixing

--- a/css/menu1.scss
+++ b/css/menu1.scss
@@ -28,6 +28,8 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    position: relative;
 }
 
 
@@ -38,10 +40,11 @@ header{
       width: 135px;
       margin: 0 auto;
     }
+
     background-color: rgb(252, 252, 252);
     width: 100%;
     height: auto;
-    padding: 5px;
+    padding: 15px;
     text-align: center;
     position: fixed;
     top: 0px;
@@ -49,6 +52,7 @@ header{
     z-index: 2;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
   
 
@@ -56,8 +60,9 @@ header{
 
 .retour i{
     position: absolute;
-    top: 10px;
+    top: 20px;
     left: 10px;
+    font-size: 18px;
 }
 
 
@@ -85,7 +90,11 @@ header{
     border-radius: 15px 15px 0px 0px;
     display: flex;
     flex-direction: column;
-    transform: translateY(-15px);
+    //transform: translateY(-15px);
+
+    position: absolute;
+    top: 280px;
+
 }
 
 
@@ -482,7 +491,8 @@ footer{
     height: 150px;
     color: white;
     padding: 30px 20px;
-    
+    position: absolute;
+    top: 1350px;
 }
 
 
@@ -504,6 +514,7 @@ footer{
     flex-direction: row;
     margin-top: 15px;
     margin-bottom: 7px;
+    
 }
 
 
